[package]
name = "webview_official"
version = "0.0.0"
authors = ["Lucas Fernandes Gonçalves Nogueira <lucas@quasar.dev>", "Daniel Thompson-Yvetot <denjell@sfosc.org>", "Tensor Programming <tensordeveloper@gmail.com>", "Serge Zaitsev <zaitsev.serge@gmail.com>"]
readme = "README.md"
license = "MIT / Apache 2"
repository = "https://github.com/tauri-apps/webview_rust"
description = "Official Webview-org Rust bindings, a tiny cross-platform library to render web-based GUIs for desktop applications"
keywords = ["web", "gui", "desktop", "webkit"]
categories = ["gui", "api-bindings"]
build = "build.rs"
edition = "2018"

[lib]
name = "webview_official"
path = "src/lib.rs"

[[example]]
name = "sample"
path = "examples/sample.rs"

[build-dependencies]
cc = "1"
pkg-config = "0.3"
